fix body not covering the whole viewport

--- a/public/css/car-form.css
+++ b/public/css/car-form.css
@@ -1,9 +1,14 @@
 *, *::after, *::before {
   box-sizing: border-box;
 }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 
 body {
-  margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #acacac;
 }
